# rust-grpc-cloud

./: Cargo.toml  Resources.txt  build.rs  deploy.yaml  docker-compose.yaml  grpc-service.yaml  start-kubers.sh  start.sh
dockerfiles/: client.dockerfile  test_rpc_server.dockerfile
my-gtk-app/: Cargo.toml
my-gtk-app/src/: main.rs
proto-testing/: Cargo.toml  build.rs  descriptos.pb  docker-compose.yml
proto-testing/another_proto/subdir/: sub.proto
proto-testing/proto/proto_example/: foo.proto  test.pb  test.proto
proto-testing/proto/proto_example/bar/: bar.proto
proto-testing/src/: lib.rs  main.rs
proto-testing/src-gtk/: main.rs
proto-testing/src-webui/: main.rs
rpc-client/: client.rs
rpc-server/: server.rs
udp-client/: main.rs
udp-server/: main.rs
