[package]
name = "rust-cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
tokio = { version = "1.35.0", features = ["full"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
  name = "server"
  path = "rpc-server/server.rs"

[[bin]]
  name = "client"
  path = "rpc-client/client.rs"

[[bin]]
  name = "udp-server"
  path = "udp-server/main.rs"

[[bin]]
  name = "udp-client"
  path = "udp-client/main.rs"