[[bin]]
name = "protobuf-example"
path = "src/main.rs"

[dependencies]
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_20"] }
protobuf = "3.7.2"
protobuf-json-mapping = "3.7.2"
serde = {version = "1.0.84", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"

[package]
autobenches = false
autobins = false
autoexamples = false
autolib = false
autotests = false
build = "build.rs"
description = "Example use of Rust Protocol Buffers bindings"
edition = "2021"
license = "BSD-3-Clause"
name = "protobuf-example"
readme = "README.md"
