[[bin]]
name = "gtk-pathfinder"
path = "src-gtk/main.rs"

[[bin]]
name = "web-pathfinder"
path = "src-webui/main.rs"

[dependencies]
protobuf = "3.7.2"
protobuf-json-mapping = "3.7.2"
serde = {version = "1.0.84", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"

[package]
autobenches = false
autobins = false
autoexamples = false
autolib = false
autotests = false
build = "build.rs"
description = "Example use of Rust Protocol Buffers bindings"
edition = "2021"
license = "BSD-3-Clause"
name = "protobuf-example"
readme = "README.md"
